refactor: clean useless code and minor changes
Signed-off-by: Jesus Recio <jrecio@izertis.com>